[package]
name = "io"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.5.1"

[dependencies]
num-bigint = "0.4.6"
rsa = "0.9.6"
pem = "3.0.4"
num-traits = "0.2.19"
bzip2 = "0.4.4"

[lib]
name = "io"

[[bench]]
name = "isaac"
harness = false

[[bench]]
name = "jag"
harness = false

[[bench]]
name = "packet"
harness = false
